<resources>
    <string name="app_name">HCDIS</string>
    <string name="NotWorkingConnection">You don\'t have a working Internet Connection.</string>
    <string name="tcp_new_built_up_area_verification">Haryana Change Detection Information System</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="powered_by_harsac">Powered by HARSAC.</string>
    <string name="Start">Start</string>
    <string name="chooseyourpreference">CHOOSE YOUR LOCATION</string>
    <string name="selectYourDistrict">Select your district</string>
    <string name="selectYourVillage">Select your village</string>
    <string name="selectYourTehsil">Select your tehsil</string>
    <string name="dialog_distrcit">Choose your district</string>
    <string name="submit">Submit</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="EnterYourMobileNumber">Mobile Number *</string>
    <string name="wewillsend">We will send you confirmation code </string>
    <string name="otpverfication">Otp verification</string>
    <string name="sendotp">Send Otp</string>
    <string name="getOtp">Get Otp</string>
    <string name="didnotreciveanycode">Didn\'t you receive any code ?</string>
    <string name="resendnewcode">Resend Code</string>
    <string name="please_enter_the_verification_code_sent_to_your_mobile_number">Please enter the verification code \n sent to your mobile number</string>
    <string name="update_available">Update Available.</string>
    <string name="please_click_on_the_below_link_n_to_get_the_updated_application">Please click on the below image to get the updated application.</string>
    <string name="close">Close</string>
    <string name="select_extra_crop_name">Select Extra Crop Name</string>
    <string name="tap_here_to_select_extra_crop_name">Tap Here to Select Extra Crop Name</string>
    <string name="space" translatable="false">---------------------</string>
    <string name="todo" translatable="false">todo</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="permissionExplanation">Look, we really need your location&#8230;</string>
    <string name="switchOnLocationShort">Oops - You are being too Smart by using FAKE GPS Kindly Stop this to continue And Restart Your Phone to Refresh your location".</string>
    <string name="switchOnLocationLong">Oops - you seem to have disabled location services at the moment.
        To continue, please click on "OK" and enable
        location. If you\'re worried about battery usage, be sure to switch to energy saving mode. </string>
    <string name="permissionPermanentlyDeclined">Bummer! You have permanently declined the location permission.
        Click "OK" to change the permission
        settings.</string>
    <string name="mockLocationMessage">Stop\nMocking\nMe</string>
    <string name="empty">Empty</string>
    <string name="enter_remarks_here">Enter Remarks Here</string>
    <string name="remarks">Remarks</string>
    <string name="login">Login</string>
    <string name="your_phone_no">Phone Number</string>
    <string name="otp">OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="officer_name">Gurvinder  Singh / गुरविंदर सिंह</string>
    <string name="officer_rank">पटवारी</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search_here">Search Here</string>
    <string name="tap_here_to_select_district_name">Tap Here To Select District Name</string>
    <string name="village_name">Village Name</string>
    <string name="tap_here_to_select_village_name">Tap Here To Select Village Name</string>
    <string name="tap_here_to_select_muraba_number">Tap Here To Select MURRBA Number</string>
    <string name="select_condition">Select Condition</string>
    <string name="select_encroachment_condition">Select Encroachment Condition</string>
    <string name="capture_image">Capture Image</string>
    <string name="save_offline">Save  Record Offline</string>
    <string name="update_record">Update Record</string>
    <string name="minimum_15_seconds_land_video">Minimum 15 seconds Video of NBA *</string>
    <string name="third_land_image">Third NBA Image  *</string>
    <string name="fourth_land_image">Fourth NBA Image  *</string>
    <string name="land_image_form_10_15_meter_distance">NBA Image From 10–15 Meter Distance *</string>
    <string name="second_land_image">Second NBA Image *</string>
    <string name="attach_land_images">Attach NBA(New Built-Up Area) Images *</string>
    <string name="name_">"Name : "</string>
    <string name="assigned_district_">"Assigned District : "</string>
    <string name="role_">"Designation : "</string>
    <string name="phone_no_">"Phone No. : "</string>
    <string name="id_">"Id : "</string>
    <string name="district_">"District : "</string>
    <string name="verified_by_">"Verified By : "</string>
    <string name="verified_">"Verified : "</string>
    <string name="murabba_khasra_">"Murabba//Khasra No : "</string>
    <string name="village_">"Village : "</string>
    <string name="tehsil_">"Tehsil : "</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait......</string>
    <string name="select_one">Select One</string>
    <string name="no_data_found">" No Data Found...."</string>
    <string name="please_one_gps">Please on the gps</string>
    <string name="your_live_location">Your live location</string>
    <string name="select_district_name">Select District Name</string>
    <string name="select_tehsil_name">Select Tehsil Name</string>
    <string name="select_village_name">Select Village Name</string>
    <string name="no_number_found">No phone numbers found</string>
    <string name="no_registered_with_gfasal">You Are not REGISTERED</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="enter_valid_mobile_no">Enter Valid Mobile Number</string>
    <string name="current_district">"Current District: "</string>
    <string name="try_again">Try again</string>
    <string name="click_back_again">Please click BACK again to exit</string>
    <string name="save_survey">Save Survey</string>
    <string name="submit_data_to_database">Submit Data to Database</string>
    <string name="add_new_point_in_buffer_range">Add new point in buffer range.</string>
    <string name="error_in_finding_your_location">Error in finding you\'re location.</string>
    <string name="offline_save_limit">Offline Storage Limit Reach To Max</string>
    <string name="are_you_want_to_submit_survey_data">Are you want to submit the Survey data ?</string>
    <string name="are_you_want_to_save_offline_survey_data">Are you want to save offline the survey data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="floors_details">Floors Details *</string>
    <string name="structure_type_kucha_pucca">Structure Type (Kucha/Pucca) *</string>
    <string name="land_type">Land Type (Government/Private) *</string>
    <string name="date">"Date: "</string>
    <string name="searchQuery">Search Here</string>
    <string name="select_all">Select All</string>
    <string name="add_record">Add Record</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="select_feedback">Select feedback</string>
    <string name="feedback">Feedback*</string>
    <string name="enter_nearby_landmarks">Enter nearby landmarks</string>
    <string name="nearby_landmarks">Nearby LandMarks*</string>
    <string name="minimum_15_seconds_video_is_required">Minimum 10 seconds video is required *</string>
    <string name="attach_nba_new_built_up_area_video">Attach NBA (New Built-Up Area) Video *</string>
    <string name="verified_area_sq_mtr">Verified Area(Sq.Mtr.)</string>
    <string name="enter_area">Enter Area</string>
    <string name="survey_form">Survey Form</string>
    <string name="are_you_sure_to_update_status_of_all_selected_points">"Are you sure to update status of all selected points? "</string>
    <string name="point_status_is_updated">Points status is updated</string>
    <string name="create_boundaries_around_point">Create Boundaries around point.</string>
    <string name="do_you_want_draw_boundaries_around_this_point">Do you want to draw boundary around this point?</string>
    <string name="first_mark_location">First mark a location</string>
    <string name="no_survice_currently_running">No services are currently running</string>
    <string name="point_is_already_selected">Point Is Already Selected.</string>
    <string name="server_connection_failed">Server connection failed, try again later</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="change_area">Change Area</string>
    <string name="basemap">Basemap</string>
    <string name="offline_records">Offline Records</string>
    <string name="others">Others</string>
    <string name="imagery">Imagery</string>
    <string name="open_street_map">Open Street Map</string>
    <string name="street">Street</string>
    <string name="topographic">Topographic</string>
    <string name="rating">Rating</string>
    <string name="language">Change Language</string>
    <string name="login_line">Welcome, Haryana Change Detection Information Systems(HARCDIS) Powered by TCP,Haryana || Contact the admin if you are not registered</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="username">Username*</string>
    <string name="point_range">Point Range</string>
    <string name="controlled_area">Controlled Area</string>
    <string name="citizen">Continue As Citizen</string>
    <string name="pin">Pin*</string>
    <string name="not_registered">Not Registered? SIGN UP</string>
    <string name="change_pin">Change Pin</string>
    <string name="back">BACK</string>
    <string name="citizen_line">Citizens can inform the authority by marking illegal construction on the map.</string>
    <string name="departmental_login">Departmental Login</string>
    <string name="forgot_pin_">Forgot Pin?</string>
    <string name="citizen_sign_on">Citizen Sign On</string>
    <string name="department_of_town_amp_country_planning_haryana"><![CDATA[Department of Town & Country Planning, Haryana]]></string>
    <string name="single_sign_on" translatable="false">Single Sign On</string>
    <string name="user_name">Phone no</string>
    <string name="enter_user_name">Enter Phone no</string>
    <string name="developed_amp_maintained_by_it_cell_town_amp_planning_department_government_of_haryana"><![CDATA[Developed & Maintained By IT Cell, Town & Planning Department Government of Haryana]]></string>
    <string name="sign_in">Sign in</string>
    <string name="resendotp">Resend OTP</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="survey_report">Survey Report</string>
</resources>