<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentRelative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginScreen">


    <TextView
        android:id="@+id/intro_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_alignParentTop="true"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/login_line"
        android:textAlignment="center"
        android:textColor="@color/appColor"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/otpverfication"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wewillsend"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/departmental_login"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />


        <View
            android:layout_width="200dp"
            android:layout_height="@dimen/dp_2"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_4"
            android:background="@color/black" />

        <EditText

            android:id="@+id/phone_number_box"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@drawable/legend_background"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="@dimen/dp_3"
            android:textAllCaps="false"
            android:textColorHint="@color/black" />


        <Button
            android:id="@+id/get_otp_button"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@color/appColor"
            android:text="@string/getOtp"
            android:textColor="@color/white" />


    </LinearLayout>


    <Button
        android:layout_margin="@dimen/dp_5"
        android:layout_above="@+id/citizen_text"
        android:id="@+id/continueAsCitizen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@color/feeded"
        android:text="@string/citizen"
        android:textColor="@color/white" />

    <TextView
        android:layout_alignParentBottom="true"
        android:id="@+id/citizen_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/citizen_line"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14" />

</RelativeLayout>