<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.HCDISLoginScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/appColor"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/department_of_town_amp_country_planning_haryana"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/brown_background"
        android:elevation="@dimen/dp_2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D8D4D4"
            android:gravity="start"
            android:padding="@dimen/dp_15"
            android:text="@string/single_sign_on"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:orientation="vertical">

            <TextView
                android:textSize="@dimen/dp_10"
                android:id="@+id/otpSendMessageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4.5"
                    android:background="@drawable/brown_background"
                    android:hint="@string/enter_user_name"
                    android:padding="@dimen/dp_12"
                    android:textSize="@dimen/sp_14" />

                <Button
                    android:id="@+id/sendOtpButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1.5"
                    android:backgroundTint="@color/appColor"
                    android:text="@string/sendotp"
                    android:textSize="@dimen/dp_10" />

                <Button
                    android:backgroundTint="@color/feeded"
                    android:id="@+id/resendOtpButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="2"
                    android:text="@string/resendotp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_10"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_3"
                android:text="@string/otp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/otpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/brown_background"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:maxLength="5"
                android:padding="@dimen/dp_12"
                android:textSize="@dimen/sp_14" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="#D8D4D4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:backgroundTint="@color/green"
                android:text="@string/sign_in"
                android:textSize="@dimen/dp_12" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:backgroundTint="@color/orange"
                android:text="@string/cancel"
                android:textSize="@dimen/dp_12" />

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainLayout"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:id="@+id/developed_text_view"
        android:text="@string/developed_amp_maintained_by_it_cell_town_amp_planning_department_government_of_haryana"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_12" />

    <TextView
        android:id="@+id/terms_and_conditions_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developed_text_view"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:gravity="center"
        android:padding="@dimen/dp_5"
        android:text="App Privacy Policy &amp; Terms &amp;Conditions"
        android:textColor="@color/appcolor"
        android:textSize="@dimen/dp_12"
        android:textStyle="bold" />
    <Button
        android:id="@+id/continueAsCitizen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/citizen_text"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@color/appColor"
        android:text="@string/citizen"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/citizen_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/citizen_line"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_12" />


</RelativeLayout>