<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CitizenModule.CitizenLoginScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/appColor"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/department_of_town_amp_country_planning_haryana"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/brown_background"
        android:elevation="@dimen/dp_2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D8D4D4"
            android:gravity="start"
            android:padding="@dimen/dp_15"
            android:text="@string/citizen_sign_on"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/appColor">

            <EditText
                android:id="@+id/id_box_citizen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/storke_background"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/appColor"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <EditText

                android:id="@+id/pin_box_citizen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/storke_background"
                android:drawableStart="@drawable/baseline_lock_open_24"
                android:hint="@string/pin"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_pin_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="30dp"
            android:text="@string/forgot_pin_"
            android:textColor="@color/red" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginCitizen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:backgroundTint="@color/green"
                android:text="@string/login"
                android:textSize="@dimen/dp_12" />

            <Button
                android:id="@+id/continueAsUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:backgroundTint="@color/orange"
                android:text="@string/back"
                android:textSize="@dimen/dp_12" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/registerAsCitizen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLayout"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/not_registered"
        android:textSize="14sp" />

</RelativeLayout>